@@ -1,5 +1,9 @@
 2005-11-14  Andrew Stubbs  <andrew.stubbs@st.com>
 
+	* gdb.texinfo (Choosing files): Add --eval-command.
+
+2005-11-14  Andrew Stubbs  <andrew.stubbs@st.com>
+
 	* gdb.texinfo (Choosing modes): Add --return-child-result.
 
 2005-11-01  Andrew Stubbs  <andrew.stubbs@st.com>
